third_party/move/move-compiler-v2/tests/ability-check/v1-signer/read_ref_transitive.exp

Diagnostics:
error: value of type `M::S<signer>` does not have the `copy` ability
  ┌─ tests/ability-check/v1-signer/read_ref_transitive.move:5:10
  │
5 │         *&x
  │          ^^ reference content copied here

error: value of type `signer` does not have the `copy` ability
   ┌─ tests/ability-check/v1-signer/read_ref_transitive.move:15:9
   │
15 │         x.s
   │         ^ reference content copied here
